# didww_encrypt_python

./: .gitignore  =3.6  Encrypt  Pipfile  README.md  codecov.yml  doc.pdf.enc  fingerprint.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
didww_encrypt/: Encrypt.py  __init__.py  __main__.py  command_line.py  encryption.py  fetching.py  fingerprint.py
didww_encrypt/tests/: test_encryption.py  test_fingerprint.py
examples/: upload_encrypted_file.py
tests/: __init__.py  requirements.txt  test_Encrypt.py  test_command_line.py  test_encryption.py  test_fingerprint.py
