[build-system]
requires =
    setuptools>=42
    wheel
build-backend = "setuptools.build_meta"

[coverage:run]
source = .
omit =
    tests/*
    setup.py
    didww_encrypt/__main__.py
    examples/*

[flake8]
exclude = .git,.idea,__pycache__,.eggs,build,dist,*.egg-info,.github
max-complexity = 10
max-line-length = 120
